--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
+
+html{
+    font-family: 'NTR', sans-serif;;
+}
+header{
+    background-color: #df6666;
+    display: block;
+    color: white;
+}
+h1{
+    font-size: 5rem;
+    margin: 0px 1rem;
+}
+nav{
+    position: fixed;
+    width: 25vw;
+    font-size: 2rem;
+    background-color: aquamarine;
+}
+
+.main{
+    display:flex;
+    flex-direction: column;
+    margin-left: 28vw;
+    
+}
+
 
 .selected {
     font-size: larger;
