--- a/src/style.css
+++ b/src/style.css
@@ -14,20 +14,27 @@ h1{
     font-size: 5rem;
     margin: 0px 1rem;
 }
+.nbm{
+    display: flex;
+
+}
 nav{
-    position: fixed;
-    width: 25vw;
     font-size: 2rem;
     background-color: aquamarine;
     height: 92vh;
     user-select: none;
+
 }
 
 nav ul{
     line-height: 2.2rem;
+    display: flex;
+    flex-flow: column wrap;
+    
 }
 .project-list{
     margin-bottom: 2rem;
+    margin-right: 2rem;
 }
 .edit-projects-div{
     display: flex;
@@ -55,37 +62,50 @@ nav ul{
 .main{
     display:flex;
     flex-direction: column;
-    margin-left: 25vw;
     padding-left: 1rem;
     
 }
 
 .task-input{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 2rem;
+    margin: 20px 0px;
 }
 
 form{
     display:flex;
     font-size: 1.5rem;
     gap: 1.5rem;
+    flex-wrap: wrap;
+    line-height: .5rem;
     
+}
+
+.taskInput label{
+    margin: -10px 0px;
 }
 
 .taskItem, .taskHeaders{
     display: flex;
     align-items: center;
+    justify-content: left;
+    flex-wrap: wrap;
     font-size: 1.5rem;
     padding-right: 5rem;
-    height: 2rem;
+    line-height: 1.5rem;
+    /* height: 2rem; */
 
 }
 
 .taskHeaders p, .taskItem p{
-    width: 20rem;
-    overflow: hidden;
+    margin: 0px;
+    width: 20vw;
+}
 
+.taskHeaders{
+    padding-left: 24px;
 }
 
 .other-line{
@@ -131,8 +151,9 @@ form{
 
 .priority{
     display: block;
-    width: .5rem;
-    height: 2rem;
+    width: .3rem;
+    flex-shrink: 0;
+    height: 2.5rem;
     background-color: rgb(255, 0, 98);
     transform: translateX(-.5rem);
     
